# QMC

./: CMakeLists.txt  Makefile  README.md  build.sh
examples/: lattice_comparison.cpp  model_comparison.cpp  square_heisenberg.cpp  temperature_scan.cpp
include/: hamiltonian.h  lattice.h  lattice.hpp  observables.h  qmc.hpp  spin_model.hpp  sse_qmc.h
src/: hamiltonian.cpp  lattice.cpp  main.cpp  observables.cpp  pimc.cpp  projector.cpp  qmc.cpp  spin_model.cpp  sse.cpp  sse_qmc.cpp
